@@ -1693,6 +1693,11 @@
                widget="purchasabletermselect"
                description="[SERVICE_TERMS]"
                validator="hostingserviceprice"/>
+        <field name="note"
+               widget="textarea"
+               validator="text"
+               max_length="1024"
+               description="[NOTE]"/>
       </fields>
     </form>
 
@@ -1742,6 +1747,11 @@
                validator="text"
                description="[DOMAIN]"
                max_length="255"/>
+        <field name="note"
+               widget="textarea"
+               validator="text"
+               max_length="1024"
+               description="[NOTE]"/>
         <field name="save"
                widget="submit"
                description="[SAVE]"
@@ -1780,11 +1790,10 @@
                validator="date"
                required="true"/>
         <field name="note"
-               widget="text"
+               widget="textarea"
                description="[NOTE]"
                validator="text"
-               min_length="1"
-               max_length="255"/>
+               max_length="1024"/>
       </fields>
     </form>
 
@@ -1801,11 +1810,11 @@
                description="[NEXT_BILLING_DATE]"
                required="true"/>
         <field name="note"
-               widget="text"
+               widget="textarea"
                description="[NOTE]"
                validator="text"
                min_length="1"
-               max_length="255"/>
+               max_length="1024"/>
         <field name="save"
                widget="submit"
                description="[SAVE]"
@@ -1849,6 +1858,11 @@
                description="[ACTIVATION_DATE]"
                validator="date"
                required="true"/>
+        <field name="note"
+               widget="textarea"
+               validator="text"
+               max_length="1024"
+               description="[NOTE]"/>
       </fields>
     </form>
 
@@ -3075,6 +3089,11 @@
                widget="purchasabletermselect"
                description="[SERVICE_TERMS]"
                validator="domainserviceprice"/>
+        <field name="note"
+               widget="textarea"
+               validator="text"
+               max_length="1024"
+               description="[NOTE]"/>
       </fields>
     </form>
 
