@@ -19,6 +19,10 @@
         <th> {form_description field="date"} </th>
         <td> {form_element field="date"} </td>
       </tr>
+      <tr>
+        <th> {form_description field="note"} </th>
+        <td> {form_element field="note" rows=4 cols=50} </td>
+      </tr>
       <tr class="footer">
         <th colspan="2">
           {form_element field="continue"} 
