@@ -33,6 +33,8 @@
         </tr>
       {/if}
       <tr>
+        <th> {form_description field="note"} </th>
+        <td> {form_element field="note" rows=4 cols=50}
       </tr>
       <tr class="footer">
         <th colspan="2">
