@@ -18,7 +18,7 @@
       </tr>
       <tr>
         <th> {form_description field="note"} </th>
-        <td> {form_element field="note" size="40"} </td>
+        <td> {form_element field="note" rows="4" cols="50"} </td>
       </tr>
       <tr class="footer">
         <th colspan="2">
